Adding the initial front end

--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -1,1 +1,22 @@
-<h3>Bem-vindo</h3>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:b="http://bootsfaces.net/ui">
+
+<h:head></h:head>
+
+<h:body>
+
+	<b:navBar brand="Concessionária" brandHref="#home.xhtml" fluid="true" inverse="true" position="top" >
+		<b:navbarLinks>
+		<b:navLink value="Usuários" href="#" iconAwesome="users"></b:navLink>
+		<b:navLink value="Funcionários" href="#" iconAwesome="user"></b:navLink>
+		<b:navLink value="Veículos" href="#" iconAwesome="car"></b:navLink>
+		</b:navbarLinks>
+	</b:navBar>
+
+</h:body>
+
+</html>
