--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -23,7 +23,7 @@
 
 <b:container>
             <h:form styleClass="form-signin">
-                <h2 class="form-signin-heading">Para continuar efetue o Login.</h2>
+                <h2 class="form-signin-heading">Para continuar, efetue o Login.</h2>
                 <b:inputText id="email" placeholder="Usuário" value="#{controller.user.email}">
                     <f:facet name="prepend">
                         <b:icon name="user"/>
