update menu in all pages and add correct url in menu

--- a/WebContent/cadastrar_usuario.xhtml
+++ b/WebContent/cadastrar_usuario.xhtml
@@ -19,11 +19,11 @@
 
 <h:body style="padding-top: 100px">
 
-	<b:navBar brand="Concessionária" brandHref="/home.xhtml" fluid="true" inverse="true" position="top" >
+	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
 		<b:navbarLinks>
-		<b:navLink value="Usuários" href="#" iconAwesome="users" active="true"></b:navLink>
-		<b:navLink value="Funcionários" href="#" iconAwesome="user"></b:navLink>
-		<b:navLink value="Veículos" href="#" iconAwesome="car"></b:navLink>
+		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users" active="true"></b:navLink>
+		<b:navLink value="Funcionários" href="/faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
+		<b:navLink value="Veículos" href="/faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 	
