--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -9,11 +9,11 @@
 
 <h:body>
 
-	<b:navBar brand="Concessionária" brandHref="#home.xhtml" fluid="true" inverse="true" position="top" >
+	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
 		<b:navbarLinks>
-		<b:navLink value="Usuários" href="#" iconAwesome="users"></b:navLink>
-		<b:navLink value="Funcionários" href="#" iconAwesome="user"></b:navLink>
-		<b:navLink value="Veículos" href="#" iconAwesome="car"></b:navLink>
+		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
+		<b:navLink value="Funcionários" href="/faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
+		<b:navLink value="Veículos" href="/faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 
