--- a/WebContent/cadastrar_usuario.xhtml
+++ b/WebContent/cadastrar_usuario.xhtml
@@ -17,7 +17,7 @@
         </style>
 </h:head>
 
-<h:body style="padding-top: 100px">
+<h:body style="padding-top: 10px">
 
 	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
 		<b:navbarLinks>
@@ -35,7 +35,7 @@
 			
 			<b:inputText value="#{controller.user.name}" label="Nome" required="true"/>
 
-			<b:inputText value="#{controller.user.email}" label="E-mail" required="true"/>
+			<b:inputText value="#{controller.user.email}" label="E-mail" mask="email" required="true"/>
 
 			<b:inputSecret value="#{controller.user.password}" label="Senha" required="true"/>
 
