some adjusting in url menu

--- a/WebContent/cadastrar_funcionario.xhtml
+++ b/WebContent/cadastrar_funcionario.xhtml
@@ -22,8 +22,8 @@
 	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
 		<b:navbarLinks>
 		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
-		<b:navLink value="Funcionários" href="/faces/cadastrar_funcionario.xhtml" iconAwesome="user" active="true"></b:navLink>
-		<b:navLink value="Veículos" href="/faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
+		<b:navLink value="Funcionários" href="faces/cadastrar_funcionario.xhtml" iconAwesome="user" active="true"></b:navLink>
+		<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 	
