adjusting all menu url

--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -13,7 +13,10 @@
 		<b:navbarLinks>
 		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
 		<b:navLink value="Funcionários" href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
+		<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml" iconAwesome="copyright"></b:navLink>
+		<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml" iconAwesome="tag"></b:navLink>
 		<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
+		<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 
