--- a/WebContent/cadastrar_funcionario.xhtml
+++ b/WebContent/cadastrar_funcionario.xhtml
@@ -6,51 +6,70 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
-<title>Cadastro de funcionário - Concessionária</title>
+	<title>Cadastro de funcionário - Concessionária</title>
 
-        <style type="text/css">
-            .form-signin {
-                margin: 0 auto;
-                max-width: 450px;
-                padding: 50px;
-            }
-        </style>
+	<style type="text/css">
+.form-signin {
+	margin: 0 auto;
+	max-width: 450px;
+	padding: 50px;
+}
+</style>
 </h:head>
 
 <h:body style="padding-top: 10px">
 
-	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
+	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml"
+		fluid="true" inverse="true" position="top">
 		<b:navbarLinks>
-		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
-		<b:navLink value="Funcionários" href="faces/cadastrar_funcionario.xhtml" iconAwesome="user" active="true"></b:navLink>
-		<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml" iconAwesome="copyright"></b:navLink>
-		<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml" iconAwesome="tag"></b:navLink>
-		<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
-		<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
+			<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml"
+				iconAwesome="users"></b:navLink>
+			<b:navLink value="Funcionários"
+				href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"
+				active="true"></b:navLink>
+			<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml"
+				iconAwesome="copyright"></b:navLink>
+			<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml"
+				iconAwesome="tag"></b:navLink>
+			<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml"
+				iconAwesome="car"></b:navLink>
+			<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
+		</b:navbarLinks>
+		<b:navbarLinks pull="right">
+			<b:navLink value="Sair" href="faces/login.xhtml"
+				iconAwesome="sign-out"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
-	
+
 	<b:form styleClass="form-signin">
 		<b:panelGrid columns="1">
 			<f:facet name="header">
 				<h:outputText value="Cadastro de funcionários" />
 			</f:facet>
 
-			<b:inputText value="#{controller.employee.name}" label="Nome" required="true"/>
+			<b:inputText value="#{controller.employee.name}" label="Nome"
+				required="true" />
 
-			<b:inputText value="#{controller.employee.email}" label="E-mail" mask="email" required="true"/>
+			<b:inputText value="#{controller.employee.email}" label="E-mail"
+				mask="email" required="true" />
 
-			<b:inputText value="#{controller.employee.rg}" label="RG" mask="numeric" required="true"/>
+			<b:inputText value="#{controller.employee.rg}" label="RG"
+				mask="numeric" required="true" />
 
-			<b:inputText value="#{controller.employee.cpf}" label="CPF" mask="999.999.999-99" required="true"/>
+			<b:inputText value="#{controller.employee.cpf}" label="CPF"
+				mask="999.999.999-99" required="true" />
 
-			<b:inputText value="#{controller.employee.date_of_birth}" label="Data de nascimento" mask="dd/mm/yyyy" required="true"/>
+			<b:inputText value="#{controller.employee.date_of_birth}"
+				label="Data de nascimento" mask="dd/mm/yyyy" required="true" />
 
-			<b:inputText value="#{controller.employee.telephone}" label="Telefone" mask="(99)9999-9999" required="true"/>
+			<b:inputText value="#{controller.employee.telephone}"
+				label="Telefone" mask="(99)9999-9999" required="true" />
 
-			<b:inputText value="#{controller.employee.cellphone}" label="Celular" mask="(99)99999-9999" required="true"/>
+			<b:inputText value="#{controller.employee.cellphone}" label="Celular"
+				mask="(99)99999-9999" required="true" />
 
-			<b:inputText value="#{controller.employee.admission_date}" label="Data de admissão" mask="dd/mm/yyyy" required="true"/>
+			<b:inputText value="#{controller.employee.admission_date}"
+				label="Data de admissão" mask="dd/mm/yyyy" required="true" />
 
 			<h:panelGroup style="display:block; text-align:center">
 				<b:commandButton id="submit" value="Cadastrar"
