--- a/WebContent/cadastrar_marca.xhtml
+++ b/WebContent/cadastrar_marca.xhtml
@@ -1,32 +1,42 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:b="http://bootsfaces.net/ui">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:b="http://bootsfaces.net/ui">
 
-	
-	<h:head>
+
+<h:head>
 	<title>Cadastro de marca - Concessionária</title>
 
-        <style type="text/css">
-            .form-signin {
-                margin: 0 auto;
-                max-width: 450px;
-                padding: 50px;
-            }
-        </style>
-	</h:head>
+	<style type="text/css">
+.form-signin {
+	margin: 0 auto;
+	max-width: 450px;
+	padding: 50px;
+}
+</style>
+</h:head>
 <h:body style="padding-top: 10px">
 
-	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
+	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml"
+		fluid="true" inverse="true" position="top">
 		<b:navbarLinks>
-		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
-		<b:navLink value="Funcionários" href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
-		<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml" iconAwesome="copyright" active="true"></b:navLink>
-		<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml" iconAwesome="tag"></b:navLink>
-		<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
-		<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
+			<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml"
+				iconAwesome="users"></b:navLink>
+			<b:navLink value="Funcionários"
+				href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
+			<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml"
+				iconAwesome="copyright" active="true"></b:navLink>
+			<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml"
+				iconAwesome="tag"></b:navLink>
+			<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml"
+				iconAwesome="car"></b:navLink>
+			<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
+		</b:navbarLinks>
+		<b:navbarLinks pull="right">
+			<b:navLink value="Sair" href="faces/login.xhtml"
+				iconAwesome="sign-out"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 
@@ -35,13 +45,15 @@
 			<f:facet name="header">
 				<h:outputText value="Cadastro de marca" />
 			</f:facet>
-			<b:inputText value="#{controller.carBrand.name}" label="Marca" required="true"/>
+			<b:inputText value="#{controller.carBrand.name}" label="Marca"
+				required="true" />
 
 			<h:panelGroup style="display:block; text-align:center">
- 				<b:commandButton value="Cadastrar" action="#{controller.createBrand()}" />
+				<b:commandButton value="Cadastrar"
+					action="#{controller.createBrand()}" />
 			</h:panelGroup>
 		</b:panelGrid>
 	</h:form>
 </h:body>
-	
+
 </html>
