--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -9,15 +9,27 @@
 
 <h:body>
 
-	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml" fluid="true" inverse="true" position="top" >
+	<b:navBar brand="Concessionária" brandHref="faces/home.xhtml"
+		fluid="true" inverse="true" position="top">
 		<b:navbarLinks>
-		<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml" iconAwesome="users"></b:navLink>
-		<b:navLink value="Funcionários" href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
-		<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml" iconAwesome="copyright"></b:navLink>
-		<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml" iconAwesome="tag"></b:navLink>
-		<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml" iconAwesome="car"></b:navLink>
-		<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
+			<b:navLink value="Usuários" href="faces/cadastrar_usuario.xhtml"
+				iconAwesome="users"></b:navLink>
+			<b:navLink value="Funcionários"
+				href="faces/cadastrar_funcionario.xhtml" iconAwesome="user"></b:navLink>
+			<b:navLink value="Marcas" href="faces/cadastrar_marca.xhtml"
+				iconAwesome="copyright"></b:navLink>
+			<b:navLink value="Modelos" href="faces/cadastrar_modelo.xhtml"
+				iconAwesome="tag"></b:navLink>
+			<b:navLink value="Veículos" href="faces/cadastrar_veiculo.xhtml"
+				iconAwesome="car"></b:navLink>
+			<b:navLink value="Relatórios" href="" iconAwesome="clipboard"></b:navLink>
 		</b:navbarLinks>
+
+		<b:navbarLinks pull="right">
+			<b:navLink value="Sair" href="faces/login.xhtml"
+				iconAwesome="sign-out"></b:navLink>
+		</b:navbarLinks>
+
 	</b:navBar>
 
 </h:body>
